--- a/app/src/Passingwind.WorkflowApp.Application.Contracts/Passingwind.WorkflowApp.Application.Contracts.csproj
+++ b/app/src/Passingwind.WorkflowApp.Application.Contracts/Passingwind.WorkflowApp.Application.Contracts.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -12,11 +12,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.ObjectExtending" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.ObjectExtending" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="7.2.3" />
     </ItemGroup>
 
 </Project>
