--- a/app/src/Passingwind.WorkflowApp.Application/Passingwind.WorkflowApp.Application.csproj
+++ b/app/src/Passingwind.WorkflowApp.Application/Passingwind.WorkflowApp.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -14,12 +14,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.3" />
-        <PackageReference Include="Volo.Abp.Account.Application" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Identity.Application" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="7.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.8" />
+        <PackageReference Include="Volo.Abp.Account.Application" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Identity.Application" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="7.2.3" />
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
