--- a/app/src/Passingwind.WorkflowApp.DbMigrator/Passingwind.WorkflowApp.DbMigrator.csproj
+++ b/app/src/Passingwind.WorkflowApp.DbMigrator/Passingwind.WorkflowApp.DbMigrator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Autofac" Version="7.2.3" />
         <ProjectReference Include="..\Passingwind.WorkflowApp.Application.Contracts\Passingwind.WorkflowApp.Application.Contracts.csproj" />
         <ProjectReference Include="..\Passingwind.WorkflowApp.EntityFrameworkCore\Passingwind.WorkflowApp.EntityFrameworkCore.csproj" />
     </ItemGroup>
