--- a/app/src/Passingwind.WorkflowApp.Domain/Passingwind.WorkflowApp.Domain.csproj
+++ b/app/src/Passingwind.WorkflowApp.Domain/Passingwind.WorkflowApp.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -13,14 +13,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Emailing" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="7.0.2" /> 
-        <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.0.2" /> 
+        <PackageReference Include="Volo.Abp.Emailing" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="7.2.3" /> 
+        <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.2.3" /> 
     </ItemGroup>
 
 </Project>
