--- a/app/src/Passingwind.WorkflowApp.EntityFrameworkCore/Passingwind.WorkflowApp.EntityFrameworkCore.csproj
+++ b/app/src/Passingwind.WorkflowApp.EntityFrameworkCore/Passingwind.WorkflowApp.EntityFrameworkCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -13,14 +13,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="7.2.3" />
     </ItemGroup>
 
     <ItemGroup>
