--- a/app/src/Passingwind.WorkflowApp.HttpApi/Passingwind.WorkflowApp.HttpApi.csproj
+++ b/app/src/Passingwind.WorkflowApp.HttpApi/Passingwind.WorkflowApp.HttpApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -13,10 +13,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="7.0.2" /> 
-        <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="7.2.3" /> 
+        <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="7.2.3" />
     </ItemGroup>
 
 </Project>
