--- a/app/src/Passingwind.WorkflowApp.MongoDB/Passingwind.WorkflowApp.MongoDB.csproj
+++ b/app/src/Passingwind.WorkflowApp.MongoDB/Passingwind.WorkflowApp.MongoDB.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -13,13 +13,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.PermissionManagement.MongoDB" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.SettingManagement.MongoDB" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Identity.MongoDB" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.MongoDB" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.AuditLogging.MongoDB" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.TenantManagement.MongoDB" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.MongoDB" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.MongoDB" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.SettingManagement.MongoDB" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Identity.MongoDB" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.MongoDB" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.AuditLogging.MongoDB" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.TenantManagement.MongoDB" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.MongoDB" Version="7.2.3" />
     </ItemGroup>
 
 </Project>
