--- a/app/src/Passingwind.WorkflowApp.Web/Passingwind.WorkflowApp.Web.csproj
+++ b/app/src/Passingwind.WorkflowApp.Web/Passingwind.WorkflowApp.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <Import Project="..\..\common.props" />
 
@@ -16,49 +16,49 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="7.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="7.0.8" />
         <PackageReference Include="Hangfire.Core" Version="1.7.29" />
         <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
         <PackageReference Include="Hangfire.Redis.StackExchange" Version="1.8.5" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
-        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="7.0.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.8" />
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="7.0.8" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.8" />
         <PackageReference Include="DistributedLock.FileSystem" Version="1.0.1" />
         <PackageReference Include="DistributedLock.Redis" Version="1.0.2" />
-        <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.2" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.2" />
         <PackageReference Include="Owl.Abp.CultureMap" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.DistributedLocking" Version="7.0.2" /> 
-        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="7.0.2" /> 
-        <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Identity.Web" Version="7.0.2" /> 
-        <PackageReference Include="Volo.Abp.Account.Web" Version="7.0.2" /> 
-        <PackageReference Include="Volo.Abp.MailKit" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.BackgroundWorkers.Hangfire" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Autofac" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.DistributedLocking" Version="7.2.3" /> 
+        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="7.2.3" /> 
+        <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Identity.Web" Version="7.2.3" /> 
+        <PackageReference Include="Volo.Abp.Account.Web" Version="7.2.3" /> 
+        <PackageReference Include="Volo.Abp.MailKit" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.BackgroundWorkers.Hangfire" Version="7.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.Email" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.Http" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.UserTask" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.BlobStorage" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.File" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.Temporal.Hangfire" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.Entity" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.RabbitMq" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.Sql" Version="2.10.2.2" />
-        <PackageReference Include="Elsa.Activities.Http.OpenApi" Version="2.10.2.2" />
+        <PackageReference Include="Elsa" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.Email" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.Http" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.UserTask" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.BlobStorage" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.File" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.Temporal.Hangfire" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.Entity" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.RabbitMq" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.Sql" Version="2.12.0" />
+        <PackageReference Include="Elsa.Activities.Http.OpenApi" Version="2.12.0" />
     </ItemGroup>
 
     <ItemGroup>
