--- a/app/test/Passingwind.WorkflowApp.EntityFrameworkCore.Tests/Passingwind.WorkflowApp.EntityFrameworkCore.Tests.csproj
+++ b/app/test/Passingwind.WorkflowApp.EntityFrameworkCore.Tests/Passingwind.WorkflowApp.EntityFrameworkCore.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -10,7 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Passingwind.WorkflowApp.EntityFrameworkCore\Passingwind.WorkflowApp.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Passingwind.WorkflowApp.TestBase\Passingwind.WorkflowApp.TestBase.csproj" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="6.0.1" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="7.2.3" />
   </ItemGroup>
 
   <ItemGroup>
