--- a/app/test/Passingwind.WorkflowApp.HttpApi.Client.ConsoleTestApp/Passingwind.WorkflowApp.HttpApi.Client.ConsoleTestApp.csproj
+++ b/app/test/Passingwind.WorkflowApp.HttpApi.Client.ConsoleTestApp/Passingwind.WorkflowApp.HttpApi.Client.ConsoleTestApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="6.0.1" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="6.0.1" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.2.3" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.3" />
     <ProjectReference Include="..\..\src\Passingwind.WorkflowApp.HttpApi.Client\Passingwind.WorkflowApp.HttpApi.Client.csproj" />
   </ItemGroup>
 
