--- a/app/test/Passingwind.WorkflowApp.TestBase/Passingwind.WorkflowApp.TestBase.csproj
+++ b/app/test/Passingwind.WorkflowApp.TestBase/Passingwind.WorkflowApp.TestBase.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.TestBase" Version="6.0.1" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="6.0.1" />
-    <PackageReference Include="Volo.Abp.Authorization" Version="6.0.1" />
+    <PackageReference Include="Volo.Abp.TestBase" Version="7.2.3" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.3" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="7.2.3" />
     <ProjectReference Include="..\..\src\Passingwind.WorkflowApp.Domain\Passingwind.WorkflowApp.Domain.csproj" />
   </ItemGroup>
 
