--- a/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -8,10 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Caching" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.Authorization.Abstractions" Version="7.0.2" /> 
+        <PackageReference Include="Volo.Abp.AutoMapper" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Caching" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Authorization.Abstractions" Version="7.2.3" /> 
     </ItemGroup>
 
     <ItemGroup>
