--- a/src/Passingwind.Abp.ElsaModule.EntityFrameworkCore/Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj
+++ b/src/Passingwind.Abp.ElsaModule.EntityFrameworkCore/Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -8,13 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.2.3" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa.Abstractions" Version="2.10.2.2" />
+        <PackageReference Include="Elsa.Abstractions" Version="2.12.0" />
         <PackageReference Include="NodaTime.Serialization.SystemTextJson" Version="1.0.0" />
     </ItemGroup>
 
